--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <div id="app">
-  <input type="text" placeholder="parent_key"/>
+  <input type="text" placeholder="parent_key" />
   <input type="text" placeholder="text" />
-  <button onclick="pushToList()">push</button>
+  <button class="push">push</button>
+  <button class="reload">reload</button>
 </div>
 
-<pre class="result">
+<!-- <pre class="result"></pre> -->
 
-</pre>
+<div style="margin-top: 10px;">
+  <textarea class="result" style="width: 100%; height: 100vh;"></textarea>
+</div>
