--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <input type="text" placeholder="parent_key" />
   <input type="text" placeholder="text" />
   <button class="push">push</button>
-  <button class="reload">reload</button>
+  <button class="reload">remap object</button>
 </div>
 
 <!-- <pre class="result"></pre> -->
