--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <!-- <pre class="result"></pre> -->
 
 <div style="margin-top: 10px;">
-  <textarea class="result" style="width: 100%; height: 100vh;"></textarea>
+  <textarea class="result" style="width: 100%; height: 40vh;"></textarea>
+  <textarea class="result_label" style="width: 100%; height: 40vh;"></textarea>
 </div>
